<resources>
    <string name="app_name">GoMovie</string>
    <string name="log_out">Log out</string>
    <string name="showtime">showtime</string>
    <string name="cinema_address">cinema address</string>
    <string name="cinema_name">cinema name</string>
    <string name="jump">jump</string>
    <string name="choose">A Movie</string>
    <string name="test">test</string>
    <string name="history">Ticket History</string>
    <string name="title_activity_signin">SigninActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign">sign</string>
</resources>