<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is Home page" />

    <Button
        android:id="@+id/btn_personInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_style1" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_style1"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn_testpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/btn_style1"
        android:text="Payment"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn_jump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/btn_style1"
        android:layout_below="@id/btn_logout"
        android:text="@string/choose"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn_showtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:layout_below="@id/btn_jump"
        android:text="@string/showtime"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:layout_below="@id/btn_jump"
        android:text="Seats"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn_fortheater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:layout_below="@id/btn_seats"
        android:text="Theaters (A new try)"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000000" />
</RelativeLayout>